Fix FAQ header on mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -25,6 +25,8 @@
 
   --leading-ens-none: 96%;
   --leading-ens-tight: 112%;
+
+  --breakpoint-xs: 30rem;
 }
 
 @theme inline {
